tests/diag/phase-bleed-runtime.err
tests/diag/phase-bleed-runtime.id:4:1: error: unbound identifier 'helper'
  'helper' is bound for-syntax (phase 1) but referenced at runtime (phase 0)
  idiom has exactly two phases; for-syntax inside for-syntax is still for-syntax
