tests/diag/phase-bleed-runtime.id
for-syntax do
  defn helper x -> add x 1
end
helper 1
